--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   // Set up initial map center and zoom level
   var map = L.map('map', {
     center: [41.57, -72.69], // EDIT latitude, longitude to re-center map
-    zoom: 9,  // EDIT from 1 to 18 -- decrease to zoom out, increase to zoom in
+    zoom: 5,  // EDIT from 1 to 18 -- decrease to zoom out, increase to zoom in
     scrollWheelZoom: false,
     tap: false
   });
@@ -69,7 +69,7 @@
 
       var marker = L.marker([row.Latitude, row.Longitude], {
         opacity: 1
-      }).bindPopup(row.Entreprise);
+      }).bindPopup(row.Entreprise<br>row.Numéro de SIRET);
       
       marker.addTo(map);
     }
