--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
     // For each row, columns `Latitude`, `Longitude`, and `Title` are required
     for (var i in data) {
       var row = data[i];
-
-      var marker = L.marker([row.Latitude, row.Longitude], {
+      var latlng = L.latLng(row.Latitude, row.Longitude);
+      var marker = L.marker([latlng.Latitude, latlng.Longitude], {
         opacity: 1
       }).bindPopup(row.SIRET+"<br>"+row.Entreprise);
       
